Fix: Renombrar Index.html a index.html

--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,8 @@
     <script src="https://unpkg.com/lucide@latest"></script>
   </head>
   <body class="min-h-screen bg-gradient-to-br from-indigo-950 to-slate-900 text-white flex items-center justify-center p-4">
+    <!-- Overlay decorativo fuera del card -->
+    <div id="decorative-overlay" class="fixed top-0 left-0 w-full h-full overflow-hidden pointer-events-none z-0" aria-hidden="true"></div>
     <div class="w-full max-w-3xl bg-white/10 backdrop-blur rounded-2xl p-6 shadow-lg border border-white/20">
       <div class="text-center mb-6">
         <h1 class="text-4xl font-bold bg-gradient-to-r from-rose-500 to-indigo-500 bg-clip-text text-transparent">Quiz de Animes</h1>
